--- a/loon.conf
+++ b/loon.conf
@@ -183,27 +183,27 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
-https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/BiliBili/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
 
 # > 国外app分流
-https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=策略选择, tag=欧易分流, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=策略选择, tag=币安分流, enabled=true
-https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
-https://rule.kelee.one/Loon/Steam.list, policy=策略选择, tag=Steam.list, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/rule/AI.list, policy=人工智能, tag=AI, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/rule/OKX.list, policy=策略选择, tag=欧易分流, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/rule/Binance.list, policy=策略选择, tag=币安分流, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/GitHub/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Steam/Steam.list, policy=策略选择, tag=Steam.list, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Discord/Discord.list, policy=Discord, tag=Discord, enabled=true
-https://kelee.one/Tool/Loon/Rule/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
-https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
-https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
-https://rule.kelee.one/Loon/Disney.list, policy=Disney, tag=Disney, enabled=true
-https://rule.kelee.one/Loon/Twitter.list, policy=Twitter, tag=Twitter, enabled=true
-https://rule.kelee.one/Loon/Facebook.list, policy=Facebook, tag=Facebook, enabled=true
-https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/TikTok/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Netflix/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/YouTube/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Disney/Disney.list, policy=Disney, tag=Disney, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Twitter/Twitter.list, policy=Twitter, tag=Twitter, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Facebook/Facebook.list, policy=Facebook, tag=Facebook, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Instagram/Instagram.list, policy=Instagram, tag=Instagram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Threads/Threads.list, policy=Threads, tag=Threads, enabled=true
-https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
-https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
-https://rule.kelee.one/Loon/OneDrive.list, policy=策略选择, tag=OneDrive, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Spotify/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Google/Google.list, policy=Google, tag=Google, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/OneDrive/OneDrive.list, policy=策略选择, tag=OneDrive, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
@@ -214,8 +214,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
 
 # > 国内域名、IP
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=大陆网站, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=大陆网站, enabled=true
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaDomain.list, policy=DIRECT, tag=国内常见域名、直连CDN, enabled=true
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaIp.list, policy=DIRECT, tag=IPIP国内地址段, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=按ASN分流中国大陆IP与域名直连, enabled=true
