--- a/loon.conf
+++ b/loon.conf
@@ -1,6 +1,7 @@
 // ==UserScript==
 // @ConfigName        自用Loon配置文件
 // @ConfigURL         https://raw.githubusercontent.com/hhpei/Tools/refs/heads/main/loon.conf
+// @日期:2025年7月9日18:40:12
 // ==/UserScript== 
 # 故障转移(fallback：按顺序选择可用的策略中最靠前的策略,可调小timeout(测试等待的最长时间)参数让缓慢线路标记为不可用)
 # 负载均衡(URL:测试链接配置,URL后会测试性检查,仅从可用的子策略中选取可用的策略)
@@ -248,26 +249,27 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 # =======👇 远程脚本 ======= #
 [Remote Script]
 
-
 # =======👇 插件资源 ======= #
 [Plugin]
-https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/blockAds.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/SevenCat_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/DragonRead_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=false
+https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=false
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/plugin/blockAds.plugin, enabled=true
+https://whatshub.top/plugin/ydcd.plugin, enabled=true
+https://whatshub.top/plugin/qmxs.plugin, enabled=true
+https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/Loon/Plugin/FanQieNovel.plugin, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/cookies.plugin, enabled=false
-https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/weibo.plugin, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/Loon/plugin/weibo.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QQ_Redirect.plugin, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/spotify.plugin, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/spotify.png, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/Auto_Join_TF.plugin, policy=策略选择, enabled=false
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=false
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=策略选择, enabled=true
 https://raw.githubusercontent.com/sub-store-org/Sub-Store/master/config/Loon.plugin, policy=策略选择, enabled=true
 https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, policy=策略选择, enabled=true
+https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, enabled=false
 [Mitm]
 hostname=
 ca-p12=
