--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -76,6 +76,7 @@ event-interaction https://raw.githubusercontent.com/fmz200/wool_scripts/main/Qua
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/BilibiliAdsLite.conf, tag=哔哩哔哩广告净化@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.conf, tag=Spotify音乐VIP[音质≤高]@app2smile, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf, tag=墨鱼专属VIP@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ALLG999/newcloud/refs/heads/master/kuwo.js, tag=酷我音乐VIP, update-interval=86400, opt-parser=false, enabled=true
 
 # ======= 🟢广告净化 ======= #
 https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/QuantumultX/rewrite/FanQieNovel.qxrewrite, tag=🍅番茄小说去广告, update-interval=86400, opt-parser=false, enabled=true
